--- a/app/locales/pt-BR/form.yml
+++ b/app/locales/pt-BR/form.yml
@@ -1,8 +1,25 @@
 pt-BR:
+
   helpers:
     submit:
       teacher:
         create: "Salvar"
+        update: "Alterar"
+        remove: "Remover"
+        cancel: "Cancelar"
+
+      discipline:
+        create: "Salvar"
+        update: "Alterar"
+        remove: "Remover"
+        cancel: "Cancelar"
+
   form:
+    error_message: "Verifique o formulário antes de prosseguir:"
+
     teacher:
       name: "Nome"
+
+    discipline:
+      name: "Nome"
+      teacher: "Professor"
