--- a/app/locales/pt-BR/titles.yml
+++ b/app/locales/pt-BR/titles.yml
@@ -7,3 +7,7 @@ pt-BR:
     discipline:
       new: "Novo"
       list: "Lista de Matérias"
+
+    classroom:
+      new: "Novo"
+      list: "Lista de Turmas"
