--- a/app/locales/pt-BR/titles.yml
+++ b/app/locales/pt-BR/titles.yml
@@ -11,3 +11,7 @@ pt-BR:
     classroom:
       new: "Novo"
       list: "Lista de Turmas"
+
+    student:
+      new: "Novo"
+      list: "Lista de Alunos"
