Disciplines in classroom

--- a/app/locales/pt-BR/form.yml
+++ b/app/locales/pt-BR/form.yml
@@ -43,6 +43,7 @@ pt-BR:
 
     classroom:
       name: "Nome"
+      created_at: "Criado em"
 
     classroom_discipline:
       discipline: "Matéria"
